--- a/My game/Style.css
+++ b/My game/Style.css
@@ -9,18 +9,19 @@ body {
     margin: 0; 
 }
 .midbox {
+    border-radius: 10px;
+    height: 100%;
+    width: 100%;
     background-color: white;
     box-shadow: 7px 10px 182px -8px rgba(0,0,0,0.75);
     position: absolute;
-    width: 60vw;
-    height: 80vh;
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;  
     display: flex;
     font-family: 'Lato', sans-serif;
 }
-#name { 
+#input { 
     left: 50%;
     width: 100%;
     font-size: 20px;
@@ -35,7 +36,7 @@ body {
 .score, .current { 
     width: 100px;
     height: 100px; 
-    text-align: cetner; 
+    text-align: center; 
     margin: auto;
 }
 p {
@@ -49,7 +50,7 @@ p {
 .playerBox-0, .playerBox-1 { 
     text-align: center;
     width: 50%; 
-    padding: 100px;
+    padding: 1rem;
 }
 
 .active {
@@ -57,18 +58,19 @@ p {
     /* box-shadow: inset -69px 0px 217px -86px rgba(0,0,0,0.45); */
     background-color: rgba(147, 147, 147, 0.50);
     color: red; 
+    height: 100%;
 }
 .current {
     margin-bottom: 50px; 
     font-size: 20px; 
 }
 #current-score-1, #current-score-0 {
-    font-size: 50px; 
-    padding: 20px;
+    font-size: 5em; 
+    padding: 2rem;
 }
 .btn {
     font-family: 'Lato', sans-serif;
-    font-size: 20px;
+    font-size: 1em;
     background:  transparent;
     position: absolute;
     border: none; 
@@ -107,12 +109,11 @@ p {
     right: calc(50% - 50px); 
 }
 
-@media screen 
-  and (device-width: 360px) 
-  and (device-height: 640px) 
-  and (-webkit-device-pixel-ratio: 2) {
+@media (min-width: 800px) {
     .midbox{
-        width: 100%;
-        height: 100%;
+        height: 80vh;
+        width: 60vw;
+        font-size: 1em;
+        border: solid;
     }
 }
